Squashing bugs
Made a few changes to the CSS for the header, fixed a few bugs that
popped up around the header, includes, etc.

--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -56,7 +56,9 @@ p {
 	margin:0;
 }
 
-#header ul {
+
+/* Link styling for header */
+.navigation ul {
 	clear:left;
 	float:left;
 	width:100%;
@@ -65,15 +67,8 @@ p {
 	margin:10px 10px 10px 20px;
 	padding:0;
 }
-/* #header ul li {
-	display:inline;
-	list-style:none;
-        font-size: 25px;
-	margin:8px 8px 8px 70px;
-	padding:0;
-} */
-/* Link styling for header */
-#header ul li a {
+
+.navigation li a {
 	float:left;
 	margin:.25em;
 	padding:3px 8px;
@@ -82,18 +77,18 @@ p {
 	line-height:1.3em;
 }
 
-#header ul li a:hover {
+.navigation li a:hover {
 	background:#369;
 	color:#fff;
 }
 
-#header ul li .active,
-#header ul li .active:hover {
+.navigation li .active,
+.navigation li .active:hover {
 	color:#fff;
 	background:#000;
 }
 
-#header ul li a span {
+.navigation li a span {
 	display:block;
 }
 
